// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography.Text Component ellipsis with no text 1`] = `
<div>
  <span
    class="typography ellipsis"
  >
    <div />
  </span>
</div>
`;

exports[`Typography.Text Component renders with all types 1`] = `
<div>
  <span
    class="typography error disabled helper highlighted label placeholder tiny"
  >
    TEXT
  </span>
</div>
`;

exports[`Typography.Text Component renders with eatch types 1`] = `
<div>
  <span
    class="typography"
  >
    TEXT
  </span>
</div>
`;

exports[`Typography.Text Component renders with eatch types 2`] = `
<div>
  <span
    class="typography disabled"
  >
    TEXT
  </span>
</div>
`;

exports[`Typography.Text Component renders with eatch types 3`] = `
<div>
  <span
    class="typography error"
  >
    TEXT
  </span>
</div>
`;

exports[`Typography.Text Component renders with eatch types 4`] = `
<div>
  <span
    class="typography helper"
  >
    TEXT
  </span>
</div>
`;

exports[`Typography.Text Component renders with eatch types 5`] = `
<div>
  <span
    class="typography highlighted"
  >
    TEXT
  </span>
</div>
`;

exports[`Typography.Text Component renders with eatch types 6`] = `
<div>
  <span
    class="typography label"
  >
    TEXT
  </span>
</div>
`;

exports[`Typography.Text Component renders with eatch types 7`] = `
<div>
  <span
    class="typography placeholder"
  >
    TEXT
  </span>
</div>
`;

exports[`Typography.Text Component renders with eatch types 8`] = `
<div>
  <span
    class="typography tiny"
  >
    TEXT
  </span>
</div>
`;

exports[`Typography.Text Component renders with no types 1`] = `
<div>
  <span
    class="typography CLASSNAME ellipsis"
    style="height: 200px;"
    title="TEXT"
  >
    TEXT
  </span>
</div>
`;

exports[`Typography.Title Component ellipsis with no text 1`] = `
<div>
  <h2
    class="typography ellipsis h2"
  >
    <div />
  </h2>
</div>
`;

exports[`Typography.Title Component renders properly 1`] = `
<div>
  <h2
    class="typography ellipsis h2 CLASSNAME"
    style="height: 200px;"
    title="TITLE"
  >
    TITLE
  </h2>
</div>
`;
